Using parnurzeal's gorequest package for HTTP requests
EndStruct functionalitiy used is availabe in the develop branch
Keystone token-get works.

--- a/.travis.yaml
+++ b/.travis.yaml
@@ -2,3 +2,12 @@ language: go
 
 go:
     - tip
+
+install:
+    - go get github.com/parnurzeal/gorequest
+
+notifications:
+    email:
+        recipients: ckmvishnu@gmail.com
+        on_success: change
+        on_failure: always
